<resources>
    <string name="app_name">AFMobile</string>
    <string name="app_title">A&amp;F\nCHOCOLATES</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username_hint">Username</string>
    <string name="re_enter_password_hint">Re-Enter Password</string>
    <string name="cancel">Cancel</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_address">My Address</string>
    <string name="payment_methods">To Pay</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="profile_name">Ceile Marie Guce</string>
    <string name="profile_email">ceile.guce@email.com</string>
    <string name="location_text">Lipa, Batangas</string>
    <string name="my_account">My Account</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="other">Other</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="current_password_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="enable_push_notifications">Enable Push Notifications</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="my_order">My Order</string>
    <string name="all_orders">All Orders</string>
    <string name="active">Active</string>
    <string name="status">Status</string>
    <string name="no_order_placed">No order placed yet.</string>
    <string name="no_order_description">You have not place on order yet. Please add items to your cart and checkout when you ready</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="empty_cart_description">Looks like you have not added anything to your cart.</string>
</resources>